Anchor posting to #log

--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -151,7 +151,7 @@
         </div>
         {% endif %}
     </div>
-    <div class="row">
+    <div id="log" class="row">
         <div class="twelve columns">
             {{ render_action_list(actions.all()) }}
         </div>
