--- a/app/templates/helpers/posts.html
+++ b/app/templates/helpers/posts.html
@@ -14,14 +14,20 @@ section (app/templates/styleguide/templating#discussion-helpers)
         <span class="u-pull-left">
             {% for image in post.images.all() %}
                 <a data-target="modal-post-image-{{ post.id }}">
-                    <img class="post-image-thumbnail" src="{{ image.image_path|resize('128x128', fill='True') }}" />
+                    <img class="post-image-thumbnail" 
+                         src="{{ image.image_path|resize('128x128', fill='True') }}" />
                 </a>
-                <div id="modal-post-image-{{ post.id }}" class="modal">
-                    <div style="width:initial; max-width:800px; display:inline-block">
-                        <a class="button-modal-close u-pull-right">
-                            <img src="{{ url_for('static', filename='open-iconic/png/x-2x.png') }}" alt="X" style="margin-bottom:0.5em" />
+                <div id="modal-post-image-{{ post.id }}" class="modal modal-img">
+                    <div>
+                        <a class="u-pull-left" href="{{ image.image_url }}">
+                            <img src="{{ url_for('static', filename='open-iconic/png/fullscreen-enter-2x.png') }}"
+                                 alt="Fullscreen"/>
                         </a>
-                        <img class="u-cf" style="width:100%" src="{{ image.image_url }}" />
+                        <a class="button-modal-close u-pull-right">
+                            <img src="{{ url_for('static', filename='open-iconic/png/x-2x.png') }}" 
+                                 alt="X" />
+                        </a>
+                        <img class="u-cf" src="{{ image.image_url }}" />
                     </div>
                 </div>
             {% endfor %}
