--- a/app/templates/email/digest.html
+++ b/app/templates/email/digest.html
@@ -14,12 +14,14 @@
 	}} summary  of <a href="https://bsolid.org">Solid</a> causes that you are helping win:
 </p>
 
+{% if actions_new|length > 0 %}
 <p style="font-weight: bold; padding: 0.5em 5%; border: 1px solid #ff9900; background-color: #fbfaf9; width: 90%;">
 	New actions available to take
 	<span style="float: right">
 		{{ actions_new|length }}
 	</span>
 </p>
+{% endif %}
 
 <p style="font-weight: bold; padding: 0.5em 5%; border: 1px solid #ff9900; background-color: #fbfaf9; width: 90%;">
 	New posts from the community
@@ -28,19 +30,23 @@
 	</span>
 </p>
 
+{% if action_supporters|legth > 0 %}
 <p style="font-weight: bold; padding: 0.5em 5%; border: 1px solid #ff9900; background-color: #fbfaf9; width: 90%;">
 	Actions completed
 	<span style="float: right">
 		{{ actions_supporters|length }}
 	</span>
 </p>
+{% endif %}
 
+{% if causes_supporters|length > 0 %}
 <p style="font-weight: bold; padding: 0.5em 5%; border: 1px solid #ff9900; background-color: #fbfaf9; width: 90%;">
 	New supporters
 	<span style="float: right">
 		{{ causes_supporters|length }}
 	</span>
 </p>
+{% endif %}
 
 {% if highlights %}
 <h2>Highlights</h2>
