Pipe burtst at work

--- a/app/templates/helpers/posts.html
+++ b/app/templates/helpers/posts.html
@@ -5,7 +5,7 @@ section (app/templates/styleguide/templating#discussion-helpers)
 
 {% from "helpers/users.html" import render_avatar %}
 
-{% macro render_post(cause, post, likes) %}
+{% macro render_post(event_id, cause, post, likes) %}
 <div class="post">
     <p class="u-remove-margin-top u-remove-margin-bottom">
         {{ render_avatar(post.author) }}&nbsp;said:
@@ -49,9 +49,9 @@ section (app/templates/styleguide/templating#discussion-helpers)
         </a>
     </small>
     <small class="u-pull-right u-add-margin-top u-add-margin-left">
-        <a class="button-icon-sm" href="">
+        <a class="button-icon-sm button-like-{{ event_id }}" href="">
             <span class="oi" data-glyph="heart"></span>
-            {{ likes }}
+            <span class="likes-{{ event_id }}">{{ likes }}</span>
         </a>
     </small>
     {% if post.author == current_user or current_user.is_admin %}
@@ -67,7 +67,7 @@ section (app/templates/styleguide/templating#discussion-helpers)
 </div>
 {% endmacro %}
 
-{% macro render_post_comment(cause, comment, likes) %}
+{% macro render_post_comment(event_id, cause, comment, likes) %}
 <div class="post">
     <p class="u-remove-margin-top u-remove-margin-bottom">
         {% if comment.author == comment.post.author %}
@@ -87,9 +87,9 @@ section (app/templates/styleguide/templating#discussion-helpers)
         </a>
     </small>
     <small class="u-pull-right u-add-margin-top u-add-margin-left">
-        <a class="button-icon-sm" href="">
+        <a class="button-icon-sm button-like-{{ event_id }}" href="">
             <span class="oi" data-glyph="heart"></span>
-            {{ likes }}
+            <span class="likes-{{ event_id }}">{{ likes }}</span>
         </a>
     </small>
     <br class="u-cf">
