God damn you javascript

--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -74,6 +74,11 @@
             history.pushState("", document.title, window.location.pathname);
         });
 
+        $('.button-like').click(function(e) {
+            var like_id = $(e.target).attr('id');
+            console.log(like_id);
+        });
+
         var breakpoint = {};
         breakpoint.refreshValue = function () {
           this.value = window.getComputedStyle(document.querySelector('body'), ':before').getPropertyValue('content').replace(/\"/g, '');
