--- a/app/templates/helpers/posts.html
+++ b/app/templates/helpers/posts.html
@@ -49,7 +49,7 @@ section (app/templates/styleguide/templating#discussion-helpers)
         </a>
     </small>
     <small class="u-pull-right u-add-margin-top u-add-margin-left">
-        <a class="button-icon-sm button-like-{{ event_id }}" href="">
+        <a id="button-like-{{ event_id }}" class="button-icon-sm button-like">
             <span class="oi" data-glyph="heart"></span>
             <span class="likes-{{ event_id }}">{{ likes }}</span>
         </a>
@@ -87,7 +87,7 @@ section (app/templates/styleguide/templating#discussion-helpers)
         </a>
     </small>
     <small class="u-pull-right u-add-margin-top u-add-margin-left">
-        <a class="button-icon-sm button-like-{{ event_id }}" href="">
+        <a id="button-like-{{ event_id }}" class="button-icon-sm button-like">
             <span class="oi" data-glyph="heart"></span>
             <span class="likes-{{ event_id }}">{{ likes }}</span>
         </a>
