--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -1072,6 +1072,10 @@ input[type="submit"]:disabled:focus {
     margin-right: 2em;
     padding-top: 0.3em;
 }
+#notify-dropdown {
+    margin-right: 4em;
+    padding-top: 0.3em;
+}
 .dropdown {
     position: relative;
     display: inline-block;
