--- a/app/templates/helpers/posts.html
+++ b/app/templates/helpers/posts.html
@@ -36,7 +36,7 @@ section (app/templates/styleguide/templating#discussion-helpers)
         {{ post_body | truncate(280, True) }} 
         {% if post_body | length > 280 %}
             <a href="{{ url_for('posts.post_detail', slug=cause.slug, pk=post.id) }}">
-                (read more)
+                {{ _('(read more)') }}
             </a>
         {% endif %}
         <br class="u-cf">
@@ -72,9 +72,9 @@ section (app/templates/styleguide/templating#discussion-helpers)
 <div class="post">
     <p class="u-remove-margin-top u-remove-margin-bottom">
         {% if comment.author == comment.post.author %}
-            {{ render_avatar(comment.author) }} commented on their own post:
+            {{ render_avatar(comment.author) }} {{ _('commented on their own post:') }}
         {% else %}
-            {{ render_avatar(comment.author) }} replied to {{ render_avatar(comment.post.author) }}
+            {{ render_avatar(comment.author) }} {{ _('replied to') }} {{ render_avatar(comment.post.author) }}
         {% endif %}
     </p>
     <article id="comment-body-{{ comment.id }}">
