--- a/app/templates/helpers/causes.html
+++ b/app/templates/helpers/causes.html
@@ -76,14 +76,14 @@ section (app/templates/styleguide/templating#cause-helpers)
             {% else %}
                 {% set already_liked = False %}
             {% endif %}
-            {{ render_post(event.id, event.item.cause, event.item, event.likers.count(), already_liked) }}
+            {{ render_post(event.item.cause, event.item, event.id, event.likers.count(), already_liked) }}
         {% elif event.event_type_id == 9 and event.item and not event.item.deleted %}
             {% if current_user in event.likers %}
                 {% set already_liked = True %}
             {% else %}
                 {% set already_liked = False %}
             {% endif %}
-            {{ render_post_comment(event.id, event.item.post.cause, event.item, event.likers.count(), already_liked) }}
+            {{ render_post_comment(event.item.post.cause, event.item, event.id, event.likers.count(), already_liked) }}
         {% endif %}
     </div>
 {% endfor %}
